name:            persistent-migrationplus
version:         0.0.1
license:         MIT
license-file:    LICENSE
author:          João Cristóvão <jmacristovao@gmail.com>
maintainer:      João Cristóvão <jmacristovao@gmail.com>
synopsis:        Execute additional actions at migration.
description:     Currently supports the addition of triggers to persistent.
category:        Database, Yesod
stability:       Unstable
cabal-version:   >= 1.8
build-type:      Simple
homepage:        https://github.com/jcristovao

Flag postgresql
  Description: postgresql extension
  Default: True

Flag mysql
  Description: mysql extension
  Default: False

Flag sqlite
  Description: sqlite extension
  Default: False

library
    build-depends:   base                  >= 4        && < 5
                   , postgresql-simple     >= 0.3      && < 0.4
                   , postgresql-libpq      >= 0.6.1    && < 0.9
                   , persistent            >= 1.2.3.2      && < 1.3
                   , persistent-postgresql >= 1.2.2
                   , containers            >= 0.2
                   , transformers          >= 0.3
                   , transformers-base     >= 0.4
                   , bytestring            >= 0.9
                   , text                  >= 0.7
                   , monad-control         >= 0.2
                   , blaze-builder
                   , time                  >= 1.1
                   , aeson                 >= 0.5
                   , conduit               >= 0.5.3
                   , template-haskell      >= 2.5
                   , persistent-template   >= 1.2.0.2
                   , hssqlppp              >= 0.5
                   , shakespeare-text      >= 1.0.0.6
    exposed-modules: Database.Persist.Migrationplus
                     Database.Persist.Postgresql.Migrationplus
    hs-source-dirs:  src
    ghc-options:     -Wall

test-suite test
    type:         exitcode-stdio-1.0
    main-is:      main.hs
    hs-source-dirs: examples,src
    build-depends:   base                  >= 4        && < 5
                   , postgresql-simple     >= 0.3      && < 0.4
                   , postgresql-libpq      >= 0.6.1    && < 0.9
                   , persistent            >= 1.2.3.2      && < 1.3
                   , containers            >= 0.2
                   , transformers          >= 0.3
                   , transformers-base     >= 0.4
                   , bytestring            >= 0.9
                   , text                  >= 0.7
                   , monad-control         >= 0.2
                   , blaze-builder
                   , time                  >= 1.1
                   , aeson                 >= 0.5
                   , conduit               >= 0.5.3
                   , template-haskell      >= 2.5
                   , persistent-template   >= 1.2.0.2
                   , hssqlppp              >= 0.5
                   , shakespeare-text      >= 1.0.0.6
                   , random                >= 1.0.1.1
                   , monad-logger          >= 0.3.1.1
                   , resourcet             >= 0.4.8
                   , system-filepath       >= 0.4.7
                   , system-fileio         >= 0.3.11
                   , QuickCheck            >= 2.6
                   , HUnit                 >= 1.2.5.2
                   , hspec                 >= 1.7.2
                   --, persistent-sqlite     >= 1.2.1

    if flag(postgresql)
      build-depends: persistent-postgresql >= 1.2.2
      cpp-options:   -DWITH_POSTGRESQL

    if flag(mysql)
      build-depends: persistent-mysql >= 1.2.0
      cpp-options:   -DWITH_MYSQL

    if flag(sqlite)
      build-depends: persistent-sqlite     >= 1.2.1
      cpp-options:   -DWITH_SQLITE


source-repository head
  type:     git
  location: https://github.com/jcristovao/migrationplus
